package com.example.myapplication;

import java.util.List;

public class UserColors {

    private String colorName;
    private String colorValue1;


    public UserColors(String colorName, String colorValue1, String colorValue11) {
        this.colorName = colorName;
        this.colorValue1 = colorValue1;
        this.colorValue1 = colorValue11;
    }

    public String getColorValue1() {
        return colorValue1;
    }

    public String getColorName() {
        return colorName;
    }



    private String colorValue2;

}
